[Bug #96693532] - Reduced header sizes slightly on mobile styles to allow a bit of margin and keep headers from breaking out of container

--- a/app/stylus/sections/hero.styl
+++ b/app/stylus/sections/hero.styl
@@ -188,8 +188,8 @@
   */
   @media screen and (max-width: $small-width)
     h1
-      font-size: 80px
-      line-height: 80px
+      font-size: 60px
+      line-height: 60px
     h2
       font-size: 18px
       width: 305px
